# todolist

./: .dockerignore  .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
todolist-postgres/: docker-compose.yaml
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_rename_tg_chat_id_tguser_chat_id.py  0003_remove_tguser_id_alter_tguser_chat_id.py
todolist/bot/tg/: client.py  dc.py
todolist/core/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_remove_user_role.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_alter_goal_category.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_board_objects.py  0007_alter_goalcategory_board.py
todolist/goals/views/: board.py  category.py  comment.py  goal.py
todolist/tests/: conftest.py  factories.py
todolist/tests/core/: login_test.py  logout_test.py  profile_retrieve_test.py  update_password_test.py  user_create_test.py
todolist/tests/goals/board/: board_create_test.py  board_destroy_test.py  board_retrieve_test.py  board_update_test.py
todolist/todolist/: settings.py  urls.py
(+5 files in other folders)
